--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-full-calendar-popover",
+  "name": "ng-full-calendar-ngx-popover",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,15 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "fullcalendar": "3.10.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.18.0",
+    "ng-fullcalendar": "1.7.1",
+    "ngx-bootstrap": "^3.1.4",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -32,6 +39,7 @@
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
